--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,15 +15,14 @@
     <!-- cannot use 25 here, as this would break compatibilty with old versions of cordova-plugin-document-viewer -->
 	<uses-sdk android:minSdkVersion="16" android:targetSdkVersion="19"/>
 
-    <supports-screens android:smallScreens="false"
+    <supports-screens android:smallScreens="true"
                       android:normalScreens="true"
                       android:largeScreens="true"
                       android:xlargeScreens="true"
                       android:anyDensity="true"/>
 
     <application android:label="@string/app_name"
-                 android:icon="@drawable/ic_launcher"
-                 tools:replace="icon, label">
+                 tools:replace="label">
         <activity android:name="SplashScreenActivity"
             	  android:theme="@android:style/Theme.Holo.Light">
             <intent-filter>
