--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,10 @@
 import com.android.builder.core.DefaultManifestParser
 
-apply plugin: 'android'
+apply plugin: 'com.android.library'
 
 dependencies {
     compile fileTree(dir: 'libs', include: '*.jar')
+    compile 'com.android.support:support-v4:+'
     compile project(path: ':mupdf-for-cleverdox')
 }
 
@@ -39,7 +40,7 @@ android {
         debug.setRoot('build-types/debug')
         release.setRoot('build-types/release')
     }
-
+/*
     applicationVariants.all { variant ->
     	// deactivate manifest merging
     	// http://stackoverflow.com/a/13959122/3070886
@@ -65,4 +66,5 @@ android {
         println "*********" + "$project.buildDir/apk/" + apkName + "**********";
         variant.outputFile = file("$project.buildDir/apk/" + apkName)
     }
+    */
 }
